fix layout bugs

--- a/frontend/src/styles/index.less
+++ b/frontend/src/styles/index.less
@@ -1,3 +1,5 @@
+@import (reference) 'styles/theme.less';
+
 * {
 	margin: 0;
 	padding: 0;
@@ -26,4 +28,15 @@ a {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+}
+
+.link {
+	color: white;
+	font-size: 20px;
+	cursor: pointer;
+	transition: 0.5s all;
+}
+
+.link:hover {
+	color: @secondary-color;
 }
